[package]
authors = ["Stefan Hausotte <stefan.hausotte@outlook.com>"]
edition = "2021"
name = "aes_tbox"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block_macro = {path = "../block_macro"}

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
