[package]
authors = ["Stefan Hausotte <stefan.hausotte@outlook.com>"]
edition = "2021"
name = "block_macro"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
