[package]
authors = ["Stefan Hausotte <stefan.hausotte@outlook.com>"]
edition = "2024"
name = "block_macro"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
